// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`D-01 regression: unaffected months are unchanged > annexure_band4_current matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 66800,
  "basic_earned": 35000,
  "basic_full": 35000,
  "computed_json": {
    "annexure": {
      "band": 4,
      "conveyance_full": 0,
      "ee_esic_full": 0,
      "ee_pf_full": 3000,
      "er_esic_full": 0,
      "er_pf_full": 3250,
      "is_custom": false,
      "medical_full": 0,
      "pf_wage_full": 25000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 0,
      "status": "confirmed",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "bank": 68000,
    "basic": 35000,
    "basic_earned": 35000,
    "conveyance_earned": 0,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 0,
    "emp_pf": 1800,
    "gross_wages": 70000,
    "hra": 14000,
    "loan": 0,
    "medical_earned": 0,
    "net_salary": 68000,
    "pf_basic": 15000,
    "pf_earned_basic": 15000,
    "present_days": 26,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 70000,
    "special_allowance": 21000,
    "stat_bonus_earned": 0,
    "tds": 0,
    "total_days": 26,
    "total_ded": 2000,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "conveyance_earned": 0,
  "conveyance_full": 0,
  "ctc_monthly": 77803,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 0,
  "emp_pf": 3000,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 70000,
  "has_master_variance": false,
  "hra_earned": 14000,
  "hra_full": 14000,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "medical_earned": 0,
  "medical_full": 0,
  "net_salary": 66800,
  "overrides_json": {},
  "pf_basic": 25000,
  "pf_earned_basic": 25000,
  "present_days": 26,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 70000,
  "source_snapshot_json": {
    "account_no": "",
    "annexure": {
      "band": 4,
      "conveyance_full": 0,
      "ee_esic_full": 0,
      "ee_pf_full": 3000,
      "er_esic_full": 0,
      "er_pf_full": 3250,
      "is_custom": false,
      "medical_full": 0,
      "pf_wage_full": 25000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 0,
      "status": "confirmed",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "basic_full": 35000,
    "confirmation_date": null,
    "ctc_monthly": 77803,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 14000,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 25000,
    "present_days": 26,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 70000,
    "special_full": 21000,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-10-01",
  },
  "special_allowance": 21000,
  "special_full": 21000,
  "stat_bonus_earned": 0,
  "stat_bonus_full": 0,
  "tds": 0,
  "total_days": 26,
  "total_ded": 3200,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > annexure_current_after_wef_partial matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 15716,
  "basic_earned": 8500,
  "basic_full": 17000,
  "computed_json": {
    "annexure": {
      "band": 3,
      "conveyance_full": 3784,
      "ee_esic_full": 128,
      "ee_pf_full": 2040,
      "er_esic_full": 638,
      "er_pf_full": 2210,
      "is_custom": false,
      "medical_full": 5000,
      "pf_wage_full": 17000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1416,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "bank": 11000,
    "basic": 17000,
    "basic_earned": 8500,
    "conveyance_earned": 1892,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 0,
    "emp_pf": 900,
    "gross_wages": 11900,
    "hra": 3400,
    "loan": 0,
    "medical_earned": 2500,
    "net_salary": 11000,
    "pf_basic": 15000,
    "pf_earned_basic": 7500,
    "present_days": 13,
    "pt": 0,
    "sal_adv": 0,
    "salary_rate": 34000,
    "special_allowance": 0,
    "stat_bonus_earned": 708,
    "tds": 0,
    "total_days": 26,
    "total_ded": 900,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "conveyance_earned": 1892,
  "conveyance_full": 3784,
  "ctc_monthly": 39083,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 64,
  "emp_pf": 1020,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 17000,
  "has_master_variance": false,
  "hra_earned": 3400,
  "hra_full": 6800,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "medical_earned": 2500,
  "medical_full": 5000,
  "net_salary": 15716,
  "overrides_json": {},
  "pf_basic": 17000,
  "pf_earned_basic": 8500,
  "present_days": 13,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 34000,
  "source_snapshot_json": {
    "account_no": "",
    "annexure": {
      "band": 3,
      "conveyance_full": 3784,
      "ee_esic_full": 128,
      "ee_pf_full": 2040,
      "er_esic_full": 638,
      "er_pf_full": 2210,
      "is_custom": false,
      "medical_full": 5000,
      "pf_wage_full": 17000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1416,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "basic_full": 17000,
    "confirmation_date": null,
    "ctc_monthly": 39083,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 6800,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 17000,
    "present_days": 13,
    "pt_amount": 0,
    "sal_adv": 0,
    "salary_rate": 34000,
    "special_full": 0,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-10-01",
  },
  "special_allowance": 0,
  "special_full": 0,
  "stat_bonus_earned": 708,
  "stat_bonus_full": 1416,
  "tds": 0,
  "total_days": 26,
  "total_ded": 1284,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > annexure_current_before_wef_no_revisions matches the pre-fix output 1`] = `null`;

exports[`D-01 regression: unaffected months are unchanged > annexure_current_no_revisions matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 31632,
  "basic_earned": 17000,
  "basic_full": 17000,
  "computed_json": {
    "annexure": {
      "band": 3,
      "conveyance_full": 3784,
      "ee_esic_full": 128,
      "ee_pf_full": 2040,
      "er_esic_full": 638,
      "er_pf_full": 2210,
      "is_custom": false,
      "medical_full": 5000,
      "pf_wage_full": 17000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1416,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "bank": 21800,
    "basic": 17000,
    "basic_earned": 17000,
    "conveyance_earned": 3784,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 0,
    "emp_pf": 1800,
    "gross_wages": 23800,
    "hra": 6800,
    "loan": 0,
    "medical_earned": 5000,
    "net_salary": 21800,
    "pf_basic": 15000,
    "pf_earned_basic": 15000,
    "present_days": 26,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 34000,
    "special_allowance": 0,
    "stat_bonus_earned": 1416,
    "tds": 0,
    "total_days": 26,
    "total_ded": 2000,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "conveyance_earned": 3784,
  "conveyance_full": 3784,
  "ctc_monthly": 39083,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 128,
  "emp_pf": 2040,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 34000,
  "has_master_variance": false,
  "hra_earned": 6800,
  "hra_full": 6800,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "medical_earned": 5000,
  "medical_full": 5000,
  "net_salary": 31632,
  "overrides_json": {},
  "pf_basic": 17000,
  "pf_earned_basic": 17000,
  "present_days": 26,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 34000,
  "source_snapshot_json": {
    "account_no": "",
    "annexure": {
      "band": 3,
      "conveyance_full": 3784,
      "ee_esic_full": 128,
      "ee_pf_full": 2040,
      "er_esic_full": 638,
      "er_pf_full": 2210,
      "is_custom": false,
      "medical_full": 5000,
      "pf_wage_full": 17000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1416,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "basic_full": 17000,
    "confirmation_date": null,
    "ctc_monthly": 39083,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 6800,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 17000,
    "present_days": 26,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 34000,
    "special_full": 0,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-10-01",
  },
  "special_allowance": 0,
  "special_full": 0,
  "stat_bonus_earned": 1416,
  "stat_bonus_full": 1416,
  "tds": 0,
  "total_days": 26,
  "total_ded": 2368,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > annexure_current_on_wef_full_month matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 31632,
  "basic_earned": 17000,
  "basic_full": 17000,
  "computed_json": {
    "annexure": {
      "band": 3,
      "conveyance_full": 3784,
      "ee_esic_full": 128,
      "ee_pf_full": 2040,
      "er_esic_full": 638,
      "er_pf_full": 2210,
      "is_custom": false,
      "medical_full": 5000,
      "pf_wage_full": 17000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1416,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "bank": 21800,
    "basic": 17000,
    "basic_earned": 17000,
    "conveyance_earned": 3784,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 0,
    "emp_pf": 1800,
    "gross_wages": 23800,
    "hra": 6800,
    "loan": 0,
    "medical_earned": 5000,
    "net_salary": 21800,
    "pf_basic": 15000,
    "pf_earned_basic": 15000,
    "present_days": 26,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 34000,
    "special_allowance": 0,
    "stat_bonus_earned": 1416,
    "tds": 0,
    "total_days": 26,
    "total_ded": 2000,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "conveyance_earned": 3784,
  "conveyance_full": 3784,
  "ctc_monthly": 39083,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 128,
  "emp_pf": 2040,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 34000,
  "has_master_variance": false,
  "hra_earned": 6800,
  "hra_full": 6800,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "medical_earned": 5000,
  "medical_full": 5000,
  "net_salary": 31632,
  "overrides_json": {},
  "pf_basic": 17000,
  "pf_earned_basic": 17000,
  "present_days": 26,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 34000,
  "source_snapshot_json": {
    "account_no": "",
    "annexure": {
      "band": 3,
      "conveyance_full": 3784,
      "ee_esic_full": 128,
      "ee_pf_full": 2040,
      "er_esic_full": 638,
      "er_pf_full": 2210,
      "is_custom": false,
      "medical_full": 5000,
      "pf_wage_full": 17000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1416,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-10-01",
    },
    "basic_full": 17000,
    "confirmation_date": null,
    "ctc_monthly": 39083,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 6800,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 17000,
    "present_days": 26,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 34000,
    "special_full": 0,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-10-01",
  },
  "special_allowance": 0,
  "special_full": 0,
  "stat_bonus_earned": 1416,
  "stat_bonus_full": 1416,
  "tds": 0,
  "total_days": 26,
  "total_ded": 2368,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > annexure_revision_month matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 27887,
  "basic_earned": 15000,
  "basic_full": 15000,
  "computed_json": {
    "annexure": {
      "band": 2,
      "conveyance_full": 5250,
      "ee_esic_full": 113,
      "ee_pf_full": 1800,
      "er_esic_full": 563,
      "er_pf_full": 1950,
      "is_custom": false,
      "medical_full": 2500,
      "pf_wage_full": 15000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1250,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-07-01",
    },
    "bank": 19000,
    "basic": 15000,
    "basic_earned": 15000,
    "conveyance_earned": 5250,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 0,
    "emp_pf": 1800,
    "gross_wages": 21000,
    "hra": 6000,
    "loan": 0,
    "medical_earned": 2500,
    "net_salary": 19000,
    "pf_basic": 15000,
    "pf_earned_basic": 15000,
    "present_days": 26,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 30000,
    "special_allowance": 0,
    "stat_bonus_earned": 1250,
    "tds": 0,
    "total_days": 26,
    "total_ded": 2000,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "conveyance_earned": 5250,
  "conveyance_full": 5250,
  "ctc_monthly": 34485,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 113,
  "emp_pf": 1800,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 30000,
  "has_master_variance": false,
  "hra_earned": 6000,
  "hra_full": 6000,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "medical_earned": 2500,
  "medical_full": 2500,
  "net_salary": 27887,
  "overrides_json": {},
  "pf_basic": 15000,
  "pf_earned_basic": 15000,
  "present_days": 26,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 30000,
  "source_snapshot_json": {
    "account_no": "",
    "annexure": {
      "band": 2,
      "conveyance_full": 5250,
      "ee_esic_full": 113,
      "ee_pf_full": 1800,
      "er_esic_full": 563,
      "er_pf_full": 1950,
      "is_custom": false,
      "medical_full": 2500,
      "pf_wage_full": 15000,
      "pt_full": 200,
      "scheme": "old",
      "stat_bonus_full": 1250,
      "status": "probation",
      "structure_version": "annexure_2026",
      "wef_date": "2026-07-01",
    },
    "basic_full": 15000,
    "confirmation_date": null,
    "ctc_monthly": 34485,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 6000,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 15000,
    "present_days": 26,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 30000,
    "special_full": 0,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-07-01",
  },
  "special_allowance": 0,
  "special_full": 0,
  "stat_bonus_earned": 1250,
  "stat_bonus_full": 1250,
  "tds": 0,
  "total_days": 26,
  "total_ded": 2113,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > legacy_current_after_wef matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 38000,
  "basic_earned": 20000,
  "basic_full": 20000,
  "computed_json": {
    "bank": 37850,
    "basic": 20000,
    "basic_earned": 20000,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 150,
    "emp_pf": 1800,
    "gross_wages": 40000,
    "hra": 8000,
    "loan": 0,
    "net_salary": 37850,
    "pf_basic": 15000,
    "pf_earned_basic": 15000,
    "present_days": 26,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 40000,
    "special_allowance": 12000,
    "tds": 0,
    "total_days": 26,
    "total_ded": 2150,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "ctc_monthly": null,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 0,
  "emp_pf": 1800,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 40000,
  "has_master_variance": false,
  "hra_earned": 8000,
  "hra_full": 8000,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "net_salary": 38000,
  "overrides_json": {},
  "pf_basic": 15000,
  "pf_earned_basic": 15000,
  "present_days": 26,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 40000,
  "source_snapshot_json": {
    "account_no": "",
    "basic_full": 20000,
    "confirmation_date": null,
    "ctc_monthly": null,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 8000,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 15000,
    "present_days": 26,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 40000,
    "special_full": 12000,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-08-01",
  },
  "special_allowance": 12000,
  "special_full": 12000,
  "tds": 0,
  "total_days": 26,
  "total_ded": 2000,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > legacy_current_partial matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 29184,
  "basic_earned": 15385,
  "basic_full": 20000,
  "computed_json": {
    "bank": 29069.24,
    "basic": 20000,
    "basic_earned": 15384.62,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 115.38,
    "emp_pf": 1384.62,
    "gross_wages": 30769.24,
    "hra": 6153.85,
    "loan": 0,
    "net_salary": 29069.24,
    "pf_basic": 15000,
    "pf_earned_basic": 11538.46,
    "present_days": 20,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 40000,
    "special_allowance": 9230.77,
    "tds": 0,
    "total_days": 26,
    "total_ded": 1700,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "ctc_monthly": null,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 0,
  "emp_pf": 1385,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 30769,
  "has_master_variance": false,
  "hra_earned": 6154,
  "hra_full": 8000,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "net_salary": 29184,
  "overrides_json": {},
  "pf_basic": 15000,
  "pf_earned_basic": 11538,
  "present_days": 20,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 40000,
  "source_snapshot_json": {
    "account_no": "",
    "basic_full": 20000,
    "confirmation_date": null,
    "ctc_monthly": null,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 8000,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 15000,
    "present_days": 20,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 40000,
    "special_full": 12000,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-08-01",
  },
  "special_allowance": 9230,
  "special_full": 12000,
  "tds": 0,
  "total_days": 26,
  "total_ded": 1585,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;

exports[`D-01 regression: unaffected months are unchanged > legacy_current_revision_month matches the pre-fix output 1`] = `
{
  "account_no": "",
  "bank_amount": 28000,
  "basic_earned": 15000,
  "basic_full": 15000,
  "computed_json": {
    "bank": 27887.5,
    "basic": 15000,
    "basic_earned": 15000,
    "custom_components": [],
    "custom_ded": 0,
    "custom_ded_full": 0,
    "custom_earn": 0,
    "custom_earn_full": 0,
    "custom_employer_full": 0,
    "declared": true,
    "emp_esic": 112.5,
    "emp_pf": 1800,
    "gross_wages": 30000,
    "hra": 6000,
    "loan": 0,
    "net_salary": 27887.5,
    "pf_basic": 15000,
    "pf_earned_basic": 15000,
    "present_days": 26,
    "pt": 200,
    "sal_adv": 0,
    "salary_rate": 30000,
    "special_allowance": 9000,
    "tds": 0,
    "total_days": 26,
    "total_ded": 2112.5,
    "unpaid_paid": 0,
  },
  "confirmation_date": null,
  "ctc_monthly": null,
  "custom_ded": 0,
  "custom_ded_full": 0,
  "custom_earn": 0,
  "custom_earn_full": 0,
  "date_of_joining": null,
  "declared": true,
  "department": "",
  "designation": "Operator",
  "emp_esic": 0,
  "emp_pf": 1800,
  "employee_code": "E139",
  "employee_id": "",
  "employee_master_id": "139",
  "employee_name": "Fixture Employee",
  "esic_no": "",
  "gross_wages": 30000,
  "has_master_variance": false,
  "hra_earned": 6000,
  "hra_full": 6000,
  "ifsc": "",
  "line_revision_no": 1,
  "loan": 0,
  "net_salary": 28000,
  "overrides_json": {},
  "pf_basic": 15000,
  "pf_earned_basic": 15000,
  "present_days": 26,
  "pt_amount": 200,
  "sal_adv": 0,
  "salary_rate": 30000,
  "source_snapshot_json": {
    "account_no": "",
    "basic_full": 15000,
    "confirmation_date": null,
    "ctc_monthly": null,
    "custom_components": [],
    "custom_ded_full": 0,
    "custom_earn_full": 0,
    "date_of_joining": null,
    "department": "",
    "designation": "Operator",
    "employee_code": "E139",
    "employee_id": "",
    "employee_name": "Fixture Employee",
    "esic_no": "",
    "hra_full": 6000,
    "ifsc": "",
    "loan": 0,
    "pf_basic": 15000,
    "present_days": 26,
    "pt_amount": 200,
    "sal_adv": 0,
    "salary_rate": 30000,
    "special_full": 9000,
    "tds": 0,
    "uan_no": "",
    "unpaid_paid": 0,
    "wef_date": "2026-01-01",
  },
  "special_allowance": 9000,
  "special_full": 9000,
  "tds": 0,
  "total_days": 26,
  "total_ded": 2000,
  "uan_no": "",
  "unpaid_paid": 0,
}
`;
